package com.bloom.roadmapservice.entity;

public enum StepStatus {
    PENDING, IN_PROGRESS, COMPLETED, ACCEPTED, REJECTED
}